# lockstep

./: .gitignore  .pre-commit-config.yaml  meson.build  meson_options.txt
configrue/meson-logs/: meson-log.txt
guix/: manifest.scm
pkg/: lockstep.in  lockstep.logrotate.in  lockstep.service.in  lockstep.spec.in  lockstep.sysconfig.in  lockstep.sysconfig.nvml.in  meson.build
src/: config.h.in  field.h  gpu.h  main.c  meson.build  nvml_step.h  step.h
